
Bug Fixes
---------

* Allow multiple MSSQL connections.

* Psycopg1 requires port to be a string; psycopg2 requires port to be an int.

* Fixed a bug in MSSQLConnection caused by column names being unicode.

* Fixed a bug in FirebirdConnection caused by column names having trailing
  spaces.

* Fixed a missed import in firebirdconnection.py.

* Remove a leading slash in FirebirdConnection.

SQLObject 0.7.2
===============

Released 20 Nov 2006.

Features & Interface
--------------------

* sqlbuilder.Select now supports JOINs exactly like SQLObject.select.

* destroySelf() removes the object from related joins.

Bug Fixes
---------

* Fixed a number of unicode-related problems with newer MySQLdb.

* If the DB API driver returns timedelta instead of time (MySQLdb does
  this) it is converted to time; but if the timedelta has days an exception
  is raised.

* Fixed a number of bugs in InheritableSQLObject related to foreign keys.

* Fixed a bug in InheritableSQLObject related to the order of tableRegistry
  dictionary.

* A bug fix that allows to use SQLObject with DateTime from Zope.

Documentation Added
-------------------

* Added "How can I define my own intermediate table in my Many-to-Many
  relationship?" to FAQ.

SQLObject 0.7.1
===============

Released 25 Sep 2006.

Features & Interface
--------------------

* Added support for psycopg2_

.. _psycopg2: http://initd.org/projects/psycopg2

* Added support for MSSQL.

* Added ``TimeCol``.

* ``RelatedJoin`` and ``SQLRelatedJoin`` objects have a
  ``createRelatedTable`` keyword argument (default ``True``).  If
  ``False``, then the related table won't be automatically created;
  instead you must manually create it (e.g., with explicit SQLObject
  classes for the joins).

* Implemented ``RLIKE`` (regular expression LIKE).

* Moved _idSequence to sqlmeta.idSequence.

Small Features
--------------

* Select over RelatedJoin.

* SQLite foreign keys.

* Postgres DB URIs with a non-default path to unix socket.
